--- a/yesod-paginator.cabal
+++ b/yesod-paginator.cabal
@@ -1,5 +1,5 @@
 name:                yesod-paginator
-version:             0.9.1
+version:             0.10.1
 synopsis:            A pagination approach for yesod
 description:         Paginate a list showing a per-item widget and links to other pages
 homepage:            http://github.com/pbrisbin/yesod-paginator
@@ -9,18 +9,18 @@ author:              Patrick Brisbin
 maintainer:          pbrisbin@gmail.com
 category:            Web, Yesod
 build-type:          Simple
-cabal-version:       >=1.6
+cabal-version:       >=1.8
 
 library
   exposed-modules: Yesod.Paginator
                    Yesod.Paginator.Widget
 
-  build-depends: base       >= 4    && < 5
-               , text       >= 0.11 && < 2.0
-               , yesod      >= 1.2  && < 1.3
-               , persistent >= 1.3  && < 1.4
-               , resourcet  >= 0.4.4
-               , transformers
+  build-depends: base       >= 4      && < 5
+               , text       >= 0.11   && < 2.0
+               , yesod      >= 1.4.1  && < 1.5
+               , persistent >= 2.0    && < 2.3
+               , resourcet  >= 1.1.5  && < 1.2
+               , transformers >= 0.4.2
 
   ghc-options: -Wall
 
