--- a/yesod-paginator.cabal
+++ b/yesod-paginator.cabal
@@ -15,11 +15,13 @@ library
   exposed-modules: Yesod.Paginator
                    Yesod.Paginator.Widget
 
-  build-depends: base       >= 4      && < 5
-               , text       >= 0.11   && < 2.0
-               , yesod      >= 1.4.1  && < 1.5
-               , persistent >= 2.0    && < 2.3
-               , resourcet  >= 1.1.5  && < 1.2
+  build-depends: base       >= 4        && < 5
+               , text       >= 0.11     && < 2.0
+               , yesod      >= 1.4.1    && < 1.5
+               , persistent >= 2.0      && < 2.3
+               , resourcet  >= 1.1.5    && < 1.2
+               , bytestring >= 0.10.4.0 && < 0.11
+               , conduit    >= 1.2.4.2  && < 1.3
                , transformers >= 0.4.2
 
   ghc-options: -Wall
