--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ dist*
 client_session_key.aes
 *.hi
 *.o
+*_o
+*_hi
 *.sqlite3
 *~
 *#
@@ -13,3 +15,4 @@ yesod-devel/
 cabal.sandbox.config
 .DS_Store
 *.swp
+Test1
