--- a/yesod-paginator.cabal
+++ b/yesod-paginator.cabal
@@ -1,5 +1,5 @@
 name:                yesod-paginator
-version:             0.10.1
+version:             0.10.2
 synopsis:            A pagination approach for yesod
 description:         Paginate a list showing a per-item widget and links to other pages
 homepage:            http://github.com/pbrisbin/yesod-paginator
@@ -19,12 +19,13 @@ library
                , text       >= 0.11     && < 2.0
                , yesod      >= 1.4.1    && < 1.5
                , persistent >= 2.0      && < 2.3
+               , esqueleto  >= 2.2.6      && < 2.3
                , resourcet  >= 1.1.5    && < 1.2
                , bytestring >= 0.10.4.0 && < 0.11
                , conduit    >= 1.2.4.2  && < 1.3
                , transformers >= 0.4.2
 
-  ghc-options: -Wall
+  ghc-options: -Wall -O0
 
 source-repository head
   type:         git
