--- a/yesod-paginator.cabal
+++ b/yesod-paginator.cabal
@@ -1,5 +1,5 @@
 name:                yesod-paginator
-version:             0.10.2
+version:             0.10.3
 synopsis:            A pagination approach for yesod
 description:         Paginate a list showing a per-item widget and links to other pages
 homepage:            http://github.com/pbrisbin/yesod-paginator
@@ -18,12 +18,12 @@ library
   build-depends: base       >= 4        && < 5
                , text       >= 0.11     && < 2.0
                , yesod      >= 1.4.1    && < 1.5
-               , persistent >= 2.2.4      && < 2.3
-               , esqueleto  >= 2.4.0      && < 2.5
+               , persistent >= 2.2.4      && < 2.7
                , resourcet  >= 1.1.5    && < 1.2
                , bytestring >= 0.10.4.0 && < 0.11
                , conduit    >= 1.2.4.2  && < 1.3
                , transformers >= 0.4.2
+               , esqueleto
 
   ghc-options: -Wall -O2
 
